tutorials/0.10/index.md
---
layout: page
title: 0.10 Tutorials
breadcrumb: 0.10
redirect_from: /tutorials/0.10.html
canonical: https://tgui.eu/tutorials/latest-stable/
---

### Installation tutorials

[Selecting backend in CMake](backends/)

[Building TGUI from source code with CMake](cmake/)

[Windows (Visual Studio)](visual-studio/)

[Windows (CodeBlocks)](windows-codeblocks/)

[macOS (Xcode)](macos-xcode/)

[Linux (also BSD and Raspberry Pi)](linux/)

[Android (SFML_GRAPHICS)](android-sfml-graphics/)

[Android (SDL_RENDERER)](android-sdl-renderer/)

[Android (SDL_TTF_GLES2)](android-sdl-ttf-gles2/)

[iOS (SFML_GRAPHICS)](ios-sfml-graphics/)

[iOS (SDL_RENDERER)](ios-sdl-renderer/)


### Getting started

[Using TGUI from a CMake project](using-from-cmake/)

[SFML_GRAPHICS backend](backend-sfml-graphics/) &nbsp; (Uses sfml-graphics for everything)

[SFML_OPENGL3 backend](backend-sfml-opengl3/) &nbsp; (Uses sfml-window and FreeType, using OpenGL to draw)

[SDL_RENDERER backend](backend-sdl-renderer/) &nbsp; (Uses SDL and SDL\_ttf, using SDL\_Renderer to draw)

[SDL_TTF_OPENGL3 backend](backend-sdl-ttf-opengl3/) &nbsp; (Uses SDL and SDL\_ttf, using OpenGL to draw)

[SDL_TTF_GLES2 backend](backend-sdl-ttf-gles2/) &nbsp; (Uses SDL and SDL\_ttf, using OpenGL ES to draw)

[SDL_OPENGL3 backend](backend-sdl-opengl3/) &nbsp; (Uses SDL and FreeType, using OpenGL to draw)

[SDL_GLES2 backend](backend-sdl-gles2/) &nbsp; (Uses SDL and FreeType, using OpenGL ES to draw)

[GLFW_OPENGL3 backend](backend-glfw-opengl3/) &nbsp; (Uses GLFW and FreeType, using OpenGL to draw)

[GLFW_GLES2 backend](backend-glfw-gles2/) &nbsp; (Uses GLFW and FreeType, using OpenGL ES to draw)


### Introduction tutorials

[Creating, copying and removing widgets](creating-widgets/)

[Basic widget functions](basic-widget-functions/)

[Signals (event callbacks)](signals/)

[Strings](strings/)

[Layouts](layouts/)

[Renderers](renderers/)

[Using themes/skins](using-themes/)

[Switching between menu screens / forms](switching-screens/)


### Intermediate tutorials

[Show/Hide animations](show-hide-animations/)

[Tool Tips](tool-tips/)

[HorizontalLayout and VerticalLayout](box-layouts/)

[Changing mouse cursor](mouse-cursor/)

[Canvas](canvas/)


### Advanced tutorials

[Creating your own themes](custom-themes/)

[Creating your own widgets](custom-widgets/)

[Loading from zip file](loading-from-zip/)

[Merging themes at runtime](merging-themes-runtime/)


<br>
Make sure to also look at the <a href="/documentation/0.10/">documentation</a> and <a href="/examples/0.10/">examples</a>.
